parser.output
Terminals unused in grammar

   TOKEN_WHILE
   TOKEN_AUTO
   TOKEN_BACKSLASH
   TOKEN_C_COMMENT
   TOKEN_CPP_COMMENT
   TOKEN_ERROR


Grammar

    0 $accept: program $end

    1 program: stmt_list TOKEN_EOF

    2 stmt_list: stmt stmt_list
    3          | stmt

    4 stmt: decl TOKEN_SEMICOLON
    5     | expr TOKEN_SEMICOLON
    6     | TOKEN_PRINT print_list TOKEN_SEMICOLON
    7     | TOKEN_RETURN expr TOKEN_SEMICOLON
    8     | TOKEN_FOR TOKEN_L_PAREN for_expr TOKEN_SEMICOLON for_expr TOKEN_SEMICOLON for_expr TOKEN_R_PAREN stmt
    9     | TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN stmt
   10     | TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN if_nest TOKEN_ELSE stmt
   11     | TOKEN_L_BRACE stmt_list TOKEN_R_BRACE

   12 if_nest: TOKEN_IF TOKEN_L_PAREN expr TOKEN_R_PAREN if_nest TOKEN_ELSE if_nest
   13        | decl TOKEN_SEMICOLON
   14        | expr TOKEN_SEMICOLON
   15        | TOKEN_L_BRACE stmt_list TOKEN_R_BRACE
   16        | TOKEN_PRINT print_list TOKEN_SEMICOLON
   17        | TOKEN_RETURN expr TOKEN_SEMICOLON
   18        | TOKEN_FOR TOKEN_L_PAREN for_expr TOKEN_SEMICOLON for_expr TOKEN_SEMICOLON for_expr TOKEN_R_PAREN if_nest

   19 decl: id TOKEN_COLON type
   20     | id TOKEN_COLON type TOKEN_ASSIGN expr
   21     | id TOKEN_COLON TOKEN_FUNCTION type arg_list
   22     | id TOKEN_COLON TOKEN_FUNCTION type arg_list TOKEN_ASSIGN TOKEN_L_BRACE stmt_list TOKEN_R_BRACE

   23 arg_list: arg TOKEN_COMMA arg_list
   24         | TOKEN_L_PAREN arg_list TOKEN_R_PAREN
   25         | arg

   26 arg: id TOKEN_COLON type

   27 print_list: expr TOKEN_COMMA print_list
   28           | expr
   29           | %empty

   30 for_expr: expr
   31         | %empty

   32 type: TOKEN_INTEGER
   33     | TOKEN_FLOAT
   34     | TOKEN_BOOLEAN
   35     | TOKEN_CHARACTER
   36     | TOKEN_STRING
   37     | TOKEN_VOID
   38     | TOKEN_ARRAY
   39     | TOKEN_FUNCTION

   40 id: TOKEN_IDENTIFIER

   41 expr: id TOKEN_ASSIGN expr
   42     | expr_or

   43 expr_or: expr_and TOKEN_OR expr_or
   44        | expr_and

   45 expr_and: expr_comp TOKEN_AND expr_and
   46         | expr_comp

   47 expr_comp: expr_add TOKEN_EQUAL expr_comp
   48          | expr_add TOKEN_LESS expr_comp
   49          | expr_add TOKEN_NEQUAL expr_comp
   50          | expr_add TOKEN_LE expr_comp
   51          | expr_add TOKEN_GE expr_comp
   52          | expr_add TOKEN_GREATER expr_comp
   53          | expr_add

   54 expr_add: expr_mul TOKEN_ADD expr_add
   55         | expr_mul TOKEN_SUB expr_add
   56         | expr_mul

   57 expr_mul: expr_exp TOKEN_MUL expr_mul
   58         | expr_exp TOKEN_DIV expr_mul
   59         | expr_exp TOKEN_MOD expr_mul
   60         | expr_exp

   61 expr_exp: expr_unary TOKEN_EXP expr_exp
   62         | expr_unary

   63 expr_unary: TOKEN_NEG expr_unary
   64           | TOKEN_NOT expr_unary
   65           | exp_post

   66 exp_post: factor TOKEN_POSTINC
   67         | factor TOKEN_POSTDEC
   68         | factor

   69 factor: TOKEN_L_PAREN expr TOKEN_R_PAREN
   70       | factor TOKEN_L_BRACKET expr TOKEN_R_BRACKET
   71       | TOKEN_IDENTIFIER TOKEN_L_PAREN arg_list TOKEN_R_PAREN
   72       | literal
   73       | id

   74 literal: TOKEN_INTEGER_LITERAL
   75        | TOKEN_FLOAT_LITERAL
   76        | TOKEN_CHARACTER_LITERAL
   77        | TOKEN_STRING_LITERAL
   78        | TOKEN_TRUE
   79        | TOKEN_FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ARRAY (258) 38
TOKEN_BOOLEAN (259) 34
TOKEN_CHARACTER (260) 35
TOKEN_FLOAT (261) 33
TOKEN_FUNCTION (262) 21 22 39
TOKEN_INTEGER (263) 32
TOKEN_STRING (264) 36
TOKEN_VOID (265) 37
TOKEN_INTEGER_LITERAL (266) 74
TOKEN_CHARACTER_LITERAL (267) 76
TOKEN_STRING_LITERAL (268) 77
TOKEN_FLOAT_LITERAL (269) 75
TOKEN_ELSE (270) 10 12
TOKEN_FALSE (271) 79
TOKEN_FOR (272) 8 18
TOKEN_IF (273) 9 10 12
TOKEN_PRINT (274) 6 16
TOKEN_RETURN (275) 7 17
TOKEN_TRUE (276) 78
TOKEN_WHILE (277)
TOKEN_AUTO (278)
TOKEN_IDENTIFIER (279) 40 71
TOKEN_L_PAREN (280) 8 9 10 12 18 24 69 71
TOKEN_R_PAREN (281) 8 9 10 12 18 24 69 71
TOKEN_L_BRACKET (282) 70
TOKEN_R_BRACKET (283) 70
TOKEN_L_BRACE (284) 11 15 22
TOKEN_R_BRACE (285) 11 15 22
TOKEN_POSTINC (286) 66
TOKEN_POSTDEC (287) 67
TOKEN_NEG (288) 63
TOKEN_NOT (289) 64
TOKEN_EXP (290) 61
TOKEN_MUL (291) 57
TOKEN_DIV (292) 58
TOKEN_MOD (293) 59
TOKEN_ADD (294) 54
TOKEN_SUB (295) 55
TOKEN_LESS (296) 48
TOKEN_LE (297) 50
TOKEN_GE (298) 51
TOKEN_GREATER (299) 52
TOKEN_EQUAL (300) 47
TOKEN_NEQUAL (301) 49
TOKEN_AND (302) 45
TOKEN_OR (303) 43
TOKEN_ASSIGN (304) 20 22 41
TOKEN_SEMICOLON (305) 4 5 6 7 8 13 14 16 17 18
TOKEN_COLON (306) 19 20 21 22 26
TOKEN_COMMA (307) 23 27
TOKEN_BACKSLASH (308)
TOKEN_C_COMMENT (309)
TOKEN_CPP_COMMENT (310)
TOKEN_ERROR (311)
TOKEN_EOF (312) 1


Nonterminals, with rules where they appear

$accept (58)
    on left: 0
program (59)
    on left: 1, on right: 0
stmt_list (60)
    on left: 2 3, on right: 1 2 11 15 22
stmt (61)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3 8 9 10
if_nest (62)
    on left: 12 13 14 15 16 17 18, on right: 10 12 18
decl (63)
    on left: 19 20 21 22, on right: 4 13
arg_list (64)
    on left: 23 24 25, on right: 21 22 23 24 71
arg (65)
    on left: 26, on right: 23 25
print_list (66)
    on left: 27 28 29, on right: 6 16 27
for_expr (67)
    on left: 30 31, on right: 8 18
type (68)
    on left: 32 33 34 35 36 37 38 39, on right: 19 20 21 22 26
id (69)
    on left: 40, on right: 19 20 21 22 26 41 73
expr (70)
    on left: 41 42, on right: 5 7 9 10 12 14 17 20 27 28 30 41 69 70
expr_or (71)
    on left: 43 44, on right: 42 43
expr_and (72)
    on left: 45 46, on right: 43 44 45
expr_comp (73)
    on left: 47 48 49 50 51 52 53, on right: 45 46 47 48 49 50 51 52
expr_add (74)
    on left: 54 55 56, on right: 47 48 49 50 51 52 53 54 55
expr_mul (75)
    on left: 57 58 59 60, on right: 54 55 56 57 58 59
expr_exp (76)
    on left: 61 62, on right: 57 58 59 60 61
expr_unary (77)
    on left: 63 64 65, on right: 61 62 63 64
exp_post (78)
    on left: 66 67 68, on right: 65
factor (79)
    on left: 69 70 71 72 73, on right: 66 67 68 70
literal (80)
    on left: 74 75 76 77 78 79, on right: 72


State 0

    0 $accept: . program $end

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_FOR                shift, and go to state 6
    TOKEN_IF                 shift, and go to state 7
    TOKEN_PRINT              shift, and go to state 8
    TOKEN_RETURN             shift, and go to state 9
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_L_BRACE            shift, and go to state 13
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    program     go to state 16
    stmt_list   go to state 17
    stmt        go to state 18
    decl        go to state 19
    id          go to state 20
    expr        go to state 21
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 1

   74 literal: TOKEN_INTEGER_LITERAL .

    $default  reduce using rule 74 (literal)


State 2

   76 literal: TOKEN_CHARACTER_LITERAL .

    $default  reduce using rule 76 (literal)


State 3

   77 literal: TOKEN_STRING_LITERAL .

    $default  reduce using rule 77 (literal)


State 4

   75 literal: TOKEN_FLOAT_LITERAL .

    $default  reduce using rule 75 (literal)


State 5

   79 literal: TOKEN_FALSE .

    $default  reduce using rule 79 (literal)


State 6

    8 stmt: TOKEN_FOR . TOKEN_L_PAREN for_expr TOKEN_SEMICOLON for_expr TOKEN_SEMICOLON for_expr TOKEN_R_PAREN stmt

    TOKEN_L_PAREN  shift, and go to state 32


State 7

    9 stmt: TOKEN_IF . TOKEN_L_PAREN expr TOKEN_R_PAREN stmt
   10     | TOKEN_IF . TOKEN_L_PAREN expr TOKEN_R_PAREN if_nest TOKEN_ELSE stmt

    TOKEN_L_PAREN  shift, and go to state 33


State 8

    6 stmt: TOKEN_PRINT . print_list TOKEN_SEMICOLON

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    $default  reduce using rule 29 (print_list)

    print_list  go to state 34
    id          go to state 35
    expr        go to state 36
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 9

    7 stmt: TOKEN_RETURN . expr TOKEN_SEMICOLON

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    id          go to state 35
    expr        go to state 37
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 10

   78 literal: TOKEN_TRUE .

    $default  reduce using rule 78 (literal)


State 11

   40 id: TOKEN_IDENTIFIER .
   71 factor: TOKEN_IDENTIFIER . TOKEN_L_PAREN arg_list TOKEN_R_PAREN

    TOKEN_L_PAREN  shift, and go to state 38

    $default  reduce using rule 40 (id)


State 12

   69 factor: TOKEN_L_PAREN . expr TOKEN_R_PAREN

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    id          go to state 35
    expr        go to state 39
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 13

   11 stmt: TOKEN_L_BRACE . stmt_list TOKEN_R_BRACE

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_FOR                shift, and go to state 6
    TOKEN_IF                 shift, and go to state 7
    TOKEN_PRINT              shift, and go to state 8
    TOKEN_RETURN             shift, and go to state 9
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_L_BRACE            shift, and go to state 13
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    stmt_list   go to state 40
    stmt        go to state 18
    decl        go to state 19
    id          go to state 20
    expr        go to state 21
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 14

   63 expr_unary: TOKEN_NEG . expr_unary

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    id          go to state 41
    expr_unary  go to state 42
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 15

   64 expr_unary: TOKEN_NOT . expr_unary

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    id          go to state 41
    expr_unary  go to state 43
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 16

    0 $accept: program . $end

    $end  shift, and go to state 44


State 17

    1 program: stmt_list . TOKEN_EOF

    TOKEN_EOF  shift, and go to state 45


State 18

    2 stmt_list: stmt . stmt_list
    3          | stmt .

    TOKEN_INTEGER_LITERAL    shift, and go to state 1
    TOKEN_CHARACTER_LITERAL  shift, and go to state 2
    TOKEN_STRING_LITERAL     shift, and go to state 3
    TOKEN_FLOAT_LITERAL      shift, and go to state 4
    TOKEN_FALSE              shift, and go to state 5
    TOKEN_FOR                shift, and go to state 6
    TOKEN_IF                 shift, and go to state 7
    TOKEN_PRINT              shift, and go to state 8
    TOKEN_RETURN             shift, and go to state 9
    TOKEN_TRUE               shift, and go to state 10
    TOKEN_IDENTIFIER         shift, and go to state 11
    TOKEN_L_PAREN            shift, and go to state 12
    TOKEN_L_BRACE            shift, and go to state 13
    TOKEN_NEG                shift, and go to state 14
    TOKEN_NOT                shift, and go to state 15

    $default  reduce using rule 3 (stmt_list)

    stmt_list   go to state 46
    stmt        go to state 18
    decl        go to state 19
    id          go to state 20
    expr        go to state 21
    expr_or     go to state 22
    expr_and    go to state 23
    expr_comp   go to state 24
    expr_add    go to state 25
    expr_mul    go to state 26
    expr_exp    go to state 27
    expr_unary  go to state 28
    exp_post    go to state 29
    factor      go to state 30
    literal     go to state 31


State 19

    4 stmt: decl . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 47


State 20

   19 decl: id . TOKEN_COLON type
   20     | id . TOKEN_COLON type TOKEN_ASSIGN expr
   21     | id . TOKEN_COLON TOKEN_FUNCTION type arg_list
   22     | id . TOKEN_COLON TOKEN_FUNCTION type arg_list TOKEN_ASSIGN TOKEN_L_BRACE stmt_list TOKEN_R_BRACE
   41 expr: id . TOKEN_ASSIGN expr
   73 factor: id .

    TOKEN_ASSIGN  shift, and go to state 48
    TOKEN_COLON   shift, and go to state 49

    $default  reduce using rule 73 (factor)


State 21

    5 stmt: expr . TOKEN_SEMICOLON

    TOKEN_SEMICOLON  shift, and go to state 50


State 22

   42 expr: expr_or .

    $default  reduce using rule 42 (expr)


State 23

   43 expr_or: expr_and . TOKEN_OR expr_or
   44        | expr_and .

    TOKEN_OR  shift, and go to state 51

    $default  reduce using rule 44 (expr_or)


State 24

   45 expr_and: expr_comp . TOKEN_AND expr_and
   46         | expr_comp .

    TOKEN_AND  shift, and go to state 52

    $default  reduce using rule 46 (expr_and)


State 25

   47 expr_comp: expr_add . TOKEN_EQUAL expr_comp
   48          | expr_add . TOKEN_LESS expr_comp
   49          | expr_add . TOKEN_NEQUAL expr_comp
   50          | expr_add . TOKEN_LE expr_comp
   51          | expr_add . TOKEN_GE expr_comp
   52          | expr_add . TOKEN_GREATER expr_comp
   53          | expr_add .

    TOKEN_LESS     shift, and go to state 53
    TOKEN_LE       shift, and go to state 54
    TOKEN_GE       shift, and go to state 55
    TOKEN_GREATER  shift, and go to state 56
    TOKEN_EQUAL    shift, and go to state 57
    TOKEN_NEQUAL   shift, and go to state 58

    $default  reduce using rule 53 (expr_comp)


State 26

   54 expr_add: expr_mul . TOKEN_ADD expr_add
   55         | expr_mul . TOKEN_SUB expr_add
   56         | expr_mul .
